src/com/br/AlgumaParser.java
// Generated from /home/joao/Documentos/ufla/Compiladores/Alguma/src/com/br/Alguma.g4 by ANTLR 4.6
package com.br;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AlgumaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, CHAR=3, INT=4, VOID=5, FLOAT=6, STRUCT=7, IF=8, ELSE=9, 
		RETURN=10, WHILE=11, LETRA=12, DIGITO=13, ESPACO=14, QUEBRA_LINHA=15, 
		LETRA_MAIUSCULA=16, ATRIBUICAO=17, IGUALDADE=18, DIFERENCA=19, MAIOR=20, 
		MENOR=21, MAIORIGUAL=22, MENORIGUAL=23, ADICAO=24, SUBTRACAO=25, MULT=26, 
		DIV=27, ABRE_CHAVE=28, FECHA_CHAVE=29, ABRE_COLCHETE=30, FECHA_COLCHETE=31, 
		ABRE_PARENTESE=32, FECHA_PARENTESE=33, VIRGULA=34, PONTO_VIRGULA=35, ASPAS_SIMPLES=36, 
		ASPAS_DUPLAS=37, WS=38, COMENTARIO=39;
	public static final int
		RULE_programa = 0, RULE_declaracaoLista = 1, RULE_declaracao = 2, RULE_varDeclaracao = 3, 
		RULE_tipoEspecificador = 4, RULE_atributosDeclaracao = 5, RULE_funDeclaracao = 6, 
		RULE_params = 7, RULE_paramLista = 8, RULE_param = 9, RULE_compostoDecl = 10, 
		RULE_localDeclaracoes = 11, RULE_comandoLista = 12, RULE_comando = 13, 
		RULE_expressaoDecl = 14, RULE_selecaoDecl = 15, RULE_elseR = 16, RULE_iteracaoDecl = 17, 
		RULE_retornoDecl = 18, RULE_expressao = 19, RULE_var = 20, RULE_expressaoSimples = 21, 
		RULE_charR = 22, RULE_relacional = 23, RULE_expressaoSoma = 24, RULE_soma = 25, 
		RULE_termo = 26, RULE_mult = 27, RULE_fator = 28, RULE_ativacao = 29, 
		RULE_args = 30, RULE_argLista = 31, RULE_num = 32, RULE_numInt = 33, RULE_ident = 34;
	public static final String[] ruleNames = {
		"programa", "declaracaoLista", "declaracao", "varDeclaracao", "tipoEspecificador", 
		"atributosDeclaracao", "funDeclaracao", "params", "paramLista", "param", 
		"compostoDecl", "localDeclaracoes", "comandoLista", "comando", "expressaoDecl", 
		"selecaoDecl", "elseR", "iteracaoDecl", "retornoDecl", "expressao", "var", 
		"expressaoSimples", "charR", "relacional", "expressaoSoma", "soma", "termo", 
		"mult", "fator", "ativacao", "args", "argLista", "num", "numInt", "ident"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'E'", "'char'", "'int'", "'void'", "'float'", "'struct'", 
		"'if'", "'else'", "'return'", "'while'", null, null, null, null, null, 
		"'='", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", 
		"'/'", "'{'", "'}'", "'['", "']'", "'('", "')'", "','", "';'", "'''", 
		"'\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "CHAR", "INT", "VOID", "FLOAT", "STRUCT", "IF", "ELSE", 
		"RETURN", "WHILE", "LETRA", "DIGITO", "ESPACO", "QUEBRA_LINHA", "LETRA_MAIUSCULA", 
		"ATRIBUICAO", "IGUALDADE", "DIFERENCA", "MAIOR", "MENOR", "MAIORIGUAL", 
		"MENORIGUAL", "ADICAO", "SUBTRACAO", "MULT", "DIV", "ABRE_CHAVE", "FECHA_CHAVE", 
		"ABRE_COLCHETE", "FECHA_COLCHETE", "ABRE_PARENTESE", "FECHA_PARENTESE", 
		"VIRGULA", "PONTO_VIRGULA", "ASPAS_SIMPLES", "ASPAS_DUPLAS", "WS", "COMENTARIO"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Alguma.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AlgumaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public DeclaracaoListaContext declaracaoLista() {
			return getRuleContext(DeclaracaoListaContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			declaracaoLista();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoListaContext extends ParserRuleContext {
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public DeclaracaoListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoLista; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterDeclaracaoLista(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitDeclaracaoLista(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitDeclaracaoLista(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoListaContext declaracaoLista() throws RecognitionException {
		DeclaracaoListaContext _localctx = new DeclaracaoListaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracaoLista);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			declaracao();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHAR) | (1L << INT) | (1L << VOID) | (1L << FLOAT) | (1L << STRUCT))) != 0)) {
				{
				{
				setState(73);
				declaracao();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public VarDeclaracaoContext varDeclaracao() {
			return getRuleContext(VarDeclaracaoContext.class,0);
		}
		public FunDeclaracaoContext funDeclaracao() {
			return getRuleContext(FunDeclaracaoContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				varDeclaracao();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				funDeclaracao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclaracaoContext extends ParserRuleContext {
		public TipoEspecificadorContext tipoEspecificador() {
			return getRuleContext(TipoEspecificadorContext.class,0);
		}
		public List<IdentContext> ident() {
			return getRuleContexts(IdentContext.class);
		}
		public IdentContext ident(int i) {
			return getRuleContext(IdentContext.class,i);
		}
		public List<NumIntContext> numInt() {
			return getRuleContexts(NumIntContext.class);
		}
		public NumIntContext numInt(int i) {
			return getRuleContext(NumIntContext.class,i);
		}
		public VarDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterVarDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitVarDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitVarDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclaracaoContext varDeclaracao() throws RecognitionException {
		VarDeclaracaoContext _localctx = new VarDeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDeclaracao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			tipoEspecificador();
			setState(84);
			ident();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ABRE_COLCHETE) {
				{
				{
				setState(85);
				match(ABRE_COLCHETE);
				setState(86);
				numInt();
				setState(87);
				match(FECHA_COLCHETE);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(94);
				match(VIRGULA);
				setState(95);
				ident();
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ABRE_COLCHETE) {
					{
					{
					setState(96);
					match(ABRE_COLCHETE);
					setState(97);
					numInt();
					setState(98);
					match(FECHA_COLCHETE);
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(PONTO_VIRGULA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoEspecificadorContext extends ParserRuleContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public AtributosDeclaracaoContext atributosDeclaracao() {
			return getRuleContext(AtributosDeclaracaoContext.class,0);
		}
		public TipoEspecificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoEspecificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterTipoEspecificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitTipoEspecificador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitTipoEspecificador(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoEspecificadorContext tipoEspecificador() throws RecognitionException {
		TipoEspecificadorContext _localctx = new TipoEspecificadorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipoEspecificador);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				match(INT);
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				match(FLOAT);
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				match(CHAR);
				}
				break;
			case VOID:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				match(VOID);
				}
				break;
			case STRUCT:
				enterOuterAlt(_localctx, 5);
				{
				setState(116);
				match(STRUCT);
				setState(117);
				ident();
				setState(118);
				match(ABRE_CHAVE);
				setState(119);
				atributosDeclaracao();
				setState(120);
				match(FECHA_CHAVE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtributosDeclaracaoContext extends ParserRuleContext {
		public List<VarDeclaracaoContext> varDeclaracao() {
			return getRuleContexts(VarDeclaracaoContext.class);
		}
		public VarDeclaracaoContext varDeclaracao(int i) {
			return getRuleContext(VarDeclaracaoContext.class,i);
		}
		public AtributosDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributosDeclaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterAtributosDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitAtributosDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitAtributosDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtributosDeclaracaoContext atributosDeclaracao() throws RecognitionException {
		AtributosDeclaracaoContext _localctx = new AtributosDeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atributosDeclaracao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(124);
				varDeclaracao();
				}
				}
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHAR) | (1L << INT) | (1L << VOID) | (1L << FLOAT) | (1L << STRUCT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDeclaracaoContext extends ParserRuleContext {
		public TipoEspecificadorContext tipoEspecificador() {
			return getRuleContext(TipoEspecificadorContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public CompostoDeclContext compostoDecl() {
			return getRuleContext(CompostoDeclContext.class,0);
		}
		public FunDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDeclaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterFunDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitFunDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitFunDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunDeclaracaoContext funDeclaracao() throws RecognitionException {
		FunDeclaracaoContext _localctx = new FunDeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funDeclaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			tipoEspecificador();
			setState(130);
			ident();
			setState(131);
			match(ABRE_PARENTESE);
			setState(132);
			params();
			setState(133);
			match(FECHA_PARENTESE);
			setState(134);
			compostoDecl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public ParamListaContext paramLista() {
			return getRuleContext(ParamListaContext.class,0);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_params);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				paramLista();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				match(VOID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamListaContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ParamListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramLista; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterParamLista(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitParamLista(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitParamLista(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListaContext paramLista() throws RecognitionException {
		ParamListaContext _localctx = new ParamListaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_paramLista);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			param();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(141);
				match(VIRGULA);
				setState(142);
				param();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TipoEspecificadorContext tipoEspecificador() {
			return getRuleContext(TipoEspecificadorContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_param);
		try {
			setState(156);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				tipoEspecificador();
				setState(149);
				ident();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				tipoEspecificador();
				setState(152);
				ident();
				setState(153);
				match(ABRE_COLCHETE);
				setState(154);
				match(FECHA_COLCHETE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompostoDeclContext extends ParserRuleContext {
		public LocalDeclaracoesContext localDeclaracoes() {
			return getRuleContext(LocalDeclaracoesContext.class,0);
		}
		public ComandoListaContext comandoLista() {
			return getRuleContext(ComandoListaContext.class,0);
		}
		public CompostoDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compostoDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterCompostoDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitCompostoDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitCompostoDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompostoDeclContext compostoDecl() throws RecognitionException {
		CompostoDeclContext _localctx = new CompostoDeclContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_compostoDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(ABRE_CHAVE);
			setState(159);
			localDeclaracoes();
			setState(160);
			comandoLista();
			setState(161);
			match(FECHA_CHAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalDeclaracoesContext extends ParserRuleContext {
		public List<VarDeclaracaoContext> varDeclaracao() {
			return getRuleContexts(VarDeclaracaoContext.class);
		}
		public VarDeclaracaoContext varDeclaracao(int i) {
			return getRuleContext(VarDeclaracaoContext.class,i);
		}
		public LocalDeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localDeclaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterLocalDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitLocalDeclaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlgumaVisitor ) return ((AlgumaVisitor<? extends T>)visitor).visitLocalDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocalDeclaracoesContext localDeclaracoes() throws RecognitionException {
		LocalDeclaracoesContext _localctx = new LocalDeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_localDeclaracoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHAR) | (1L << INT) | (1L << VOID) | (1L << FLOAT) | (1L << STRUCT))) != 0)) {
				{
				{
				setState(163);
				varDeclaracao();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
